# challenges

./: README.md  sync.sh
challenge-01-order-book/: CMakeCache.txt  CMakeLists.txt  Makefile  annotated.text  benchmark  benchmark.cpp  cachegrind.out.181001  cachegrind.out.73464  cachegrind.out.74824  cachegrind.out.75540  cachegrind.out.76077  cachegrind.out.76214  cmake_install.cmake  perf_cache_output.txt  perf_stat_output.txt  report.txt  run_cache_miss.txt
challenge-01-order-book/solution/: solution.cpp  solution.h  solution_my.cpp  solution_my.h
challenge-02-multi-book/solution/: solution.cpp  solution.h
challenge-07-string-map/: CMakeCache.txt  Makefile  benchmark.cpp  cmake_install.cmake  dump.txt
challenge-07-string-map/solution/: solution.cpp  solution.h
challenge-14-build-optimization/: benchmark-slow.s  benchmark.s  optimized_assembly.s
challenge-14-build-optimization/solution/: solution.h
challenge-18-build-optimization-2/: benchmark.s  libhotpath.asm
challenge-18-build-optimization-2/solution/: solution.h
challenge-19-memory-triathlon/: .gitignore  CMakeLists.txt  README.md  benchmark.cpp  challenge.yaml  fetch_sample.sh  replay.hpp  triathlon.h
challenge-19-memory-triathlon/solution/: solution.cpp  solution.h
common/: benchmark_harness.h
common/workload_gen/: workload_gen.cpp  workload_gen.h
